# Astral

./: CMakeLists.txt  README.md  main.cpp
Basic/: Camera.cpp  Camera.h  SDFObject.h  TransformManager.cpp  TransformManager.h
ImGizmo/: ImGuizmo.cpp  ImGuizmo.h
UI/: AstralUI.cpp  AstralUI.h
shaders/: picking.frag  raymarch.frag  raymarch.vert
utilities/: utility.cpp  utility.h
